--- a/01_Basic_Python_1.ipynb
+++ b/01_Basic_Python_1.ipynb
@@ -35,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sigvehaug/DSF-DCBP/blob/main/01_Basic_Python_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fabian819/DSF/blob/main/01_Basic_Python_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -111,13 +111,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print('Hello')"
       ],
       "metadata": {
-        "id": "E5MUoOPHIs9T"
+        "id": "E5MUoOPHIs9T",
+        "outputId": "4ef4c40d-e398-441b-9644-5c208265f78c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -140,13 +152,31 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "sum = 2 + 3 + 5 \\\n",
+        "      - 5*2\n",
+        "print(sum)\n",
+        "sum = (2 + 3 + 5\n",
+        "      - 5*2)\n",
+        "print(sum)"
       ],
       "metadata": {
-        "id": "CUxwOe2jI0ZP"
+        "id": "CUxwOe2jI0ZP",
+        "outputId": "b4fcfe9f-6105-4521-902d-e6237bacccd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,9 +191,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "wYgHhwUQI7Qp"
       },
@@ -186,9 +214,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "dYm0wryNJW4h"
       },
@@ -213,9 +239,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "5CZg6MIXJfyF"
       },
@@ -293,9 +317,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "_j5n_dOmKNTy"
       },
@@ -352,9 +374,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "mn6GCEBhLwFO"
       },
@@ -394,9 +414,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "yLdjb7mfM-23"
       },
@@ -426,9 +444,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "vp-r6NWGNIrf"
       },
@@ -464,9 +480,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "a84XQ-wGNYl1"
       },
@@ -565,9 +579,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "xbQjE9QYO5PM"
       },
@@ -594,9 +606,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "zwSx2DxCPIOO"
       },
@@ -663,9 +673,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "kXLgXEfXPxyy"
       },
@@ -689,9 +697,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "4wnf9SrXQk9I"
       },
@@ -713,9 +719,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "6giIxBdPQsK1"
       },
@@ -740,9 +744,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "IySNZUAYQ5st"
       },
@@ -774,9 +776,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "qRuxsHUCRNGy"
       },
@@ -798,9 +798,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "6ZvzYwncRY0S"
       },
@@ -850,9 +848,7 @@
       "metadata": {
         "id": "bQ_6CPCULCRO"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -883,9 +879,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "WAqCSo4rUEJ7"
       },
