Begin working through

--- a/03_Basic_Python_2.ipynb
+++ b/03_Basic_Python_2.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sigvehaug/DSF-DCBP/blob/main/03_Basic_Python_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fabian819/DSF/blob/main/03_Basic_Python_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -134,13 +134,36 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for x in [-15, 2, 0, True]:\n",
+        "  if x == 0:\n",
+        "      print(x, \"is zero\")\n",
+        "  elif x > 0:\n",
+        "      print(x, \"is positive\")\n",
+        "  elif x < 0:\n",
+        "     print(x, \"is negative\")\n",
+        "  else:\n",
+        "     print(x, \"is unlike anything I've ever seen...\")"
       ],
       "metadata": {
-        "id": "bA5nH8S6HApX"
+        "id": "bA5nH8S6HApX",
+        "outputId": "f68de002-8eae-4807-e9a7-b6b639e3419d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-15 is negative\n",
+            "2 is positive\n",
+            "0 is zero\n",
+            "True is positive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,13 +195,34 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for N in [2, 3, 5, 7]:\n",
+        "    print(N, end=' ') # print all on same line\n",
+        "print()\n",
+        "for i in range(10):\n",
+        "    print(i, end=' ')\n",
+        "print()\n",
+        "for i in range(6,60,5):\n",
+        "    print(i, end=' ')"
       ],
       "metadata": {
-        "id": "yWwADUhiHYQI"
+        "id": "yWwADUhiHYQI",
+        "outputId": "72e251b2-b3fa-4490-9dda-fcd337a0069c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3 5 7 \n",
+            "0 1 2 3 4 5 6 7 8 9 \n",
+            "6 11 16 21 26 31 36 41 46 51 56 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -206,13 +250,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "i = 0\n",
+        "while i < 10:\n",
+        "    print(i, end=' ')\n",
+        "    i += 1"
       ],
       "metadata": {
-        "id": "YcWCBKNotrLE"
+        "id": "YcWCBKNotrLE",
+        "outputId": "5dc0e4ac-67b0-46e3-8c88-aaec8ef17d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 5 6 7 8 9 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -242,13 +301,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for n in range(20):\n",
+        "    # if the remainder of n / 2 is 0, skip the rest of the loop\n",
+        "    if n % 2 == 0:\n",
+        "        continue\n",
+        "\n",
+        "    print(n, end=' ')"
       ],
       "metadata": {
-        "id": "hEUd59imt0lV"
+        "id": "hEUd59imt0lV",
+        "outputId": "a721ba0d-85e5-44d8-abcd-06ce0aa5c46d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 5 7 9 11 13 15 17 19 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -274,18 +350,40 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "a, b = 0, 1\n",
+        "amax = 100\n",
+        "L = []\n",
+        "\n",
+        "while True:\n",
+        "    a, b = b, a + b\n",
+        "    if a > amax:\n",
+        "        break\n",
+        "    L.append(a)\n",
+        "\n",
+        "print(L)"
       ],
       "metadata": {
-        "id": "DzabsvWXuHxs"
+        "id": "DzabsvWXuHxs",
+        "outputId": "6af7c320-5167-4906-8964-692548c3d59a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#The code above prints the Fibonacci sequence"
       ],
       "metadata": {
         "id": "jkUBuPFLuA3v"
@@ -317,13 +415,35 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Loop with an else block\n",
+        "L = []\n",
+        "nmax = 100\n",
+        "\n",
+        "for n in range(2, nmax):\n",
+        "    for factor in L:\n",
+        "        if n % factor == 0:\n",
+        "            break\n",
+        "    else: # no break\n",
+        "        L.append(n)\n",
+        "print(L)"
       ],
       "metadata": {
-        "id": "y7K5V8CruQt5"
+        "id": "y7K5V8CruQt5",
+        "outputId": "c7e0778b-5691-4c2b-9c39-ae1b72536260",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -331,7 +451,7 @@
         "id": "TfEsRLEzr0re"
       },
       "source": [
-        ""
+        "#The code above prints the prime numbers smaller than nmax"
       ],
       "execution_count": null,
       "outputs": []
@@ -370,13 +490,37 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Define/write a function calculating the fibonacci numbers\n",
+        "def fibonacci(N):\n",
+        "    L = []\n",
+        "    a, b = 0, 1\n",
+        "    while len(L) < N:\n",
+        "        a, b = b, a + b\n",
+        "        L.append(a)\n",
+        "    return L\n",
+        "# Call that function\n",
+        "fibonacci(10)"
       ],
       "metadata": {
-        "id": "YRjdVc2NumEo"
+        "id": "YRjdVc2NumEo",
+        "outputId": "3653d51b-eb8f-4407-f032-3cf4d4dad6bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -396,13 +540,29 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def real_imag_conj(val):\n",
+        "    return val.real, val.imag, val.conjugate()\n",
+        "\n",
+        "r, i, c = real_imag_conj(3 + 4j)\n",
+        "print(r, i, c)"
       ],
       "metadata": {
-        "id": "uQzc9u-vuwer"
+        "id": "uQzc9u-vuwer",
+        "outputId": "e7419221-90ba-4e8a-ebb1-47bcaaabd55f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0 4.0 (3-4j)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -428,13 +588,39 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Default arguments\n",
+        "def fibonacci(N, a=0, b=1):\n",
+        "    L = []\n",
+        "    while len(L) < N:\n",
+        "        a, b = b, a + b\n",
+        "        L.append(a)\n",
+        "    return L\n",
+        "\n",
+        "print(fibonacci(10))\n",
+        "print(fibonacci(10,3,1))\n",
+        "print(fibonacci(10, b=3, a=1))\n",
+        "print(fibonacci(10, 3, 2))"
       ],
       "metadata": {
-        "id": "6Er9Uj8vu6Gv"
+        "id": "6Er9Uj8vu6Gv",
+        "outputId": "4ef8f948-40c5-41ae-a44a-238bc2a97e50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
+            "[1, 4, 5, 9, 14, 23, 37, 60, 97, 157]\n",
+            "[3, 4, 7, 11, 18, 29, 47, 76, 123, 199]\n",
+            "[2, 5, 7, 12, 19, 31, 50, 81, 131, 212]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -454,7 +640,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5SGgTXxotTol",
-        "outputId": "20eadbdb-d9e1-41f4-db63-f03f98f44465"
+        "outputId": "70d6cefb-1274-4ecd-ca2e-0c075092bdae"
       },
       "source": [
         "def catch_all(*args, **kwargs):\n",
@@ -464,7 +650,7 @@
         "catch_all(1, 2, 3, a=4, b=5)\n",
         "catch_all('a', keyword=2)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,14 +683,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X1SMnFmGuFYU",
-        "outputId": "f70643c1-7d04-4acc-ce8f-34588e964140"
+        "outputId": "4ef03c94-25a8-41ee-f3db-e7877c8fd795"
       },
       "source": [
         "\n",
         "add = lambda x, y: x + y\n",
         "add(1, 2)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +700,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 19
         }
       ]
     },
@@ -523,9 +709,7 @@
       "metadata": {
         "id": "kALNFH2oukJc"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -545,15 +729,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0l2HG8VcwN0A"
+        "id": "0l2HG8VcwN0A",
+        "outputId": "bc26be62-0574-465b-e7f3-08ca0badd4a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# x = 'a string'\n",
-        "# y = \"a string\"\n",
-        "# x == y"
+        "x = 'a string'\n",
+        "y = \"a string\"\n",
+        "x == y"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -562,13 +761,13 @@
       },
       "source": [
         "# # Multiline strings\n",
-        "# multiline = \"\"\"\n",
-        "# one\n",
-        "# two\n",
-        "# three\n",
-        "# \"\"\""
+        "multiline = \"\"\"\n",
+        "one\n",
+        "two\n",
+        "three\n",
+        "\"\"\""
       ],
-      "execution_count": 2,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -584,35 +783,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BHb9U59tw9ed"
+        "id": "BHb9U59tw9ed",
+        "outputId": "55be58b1-0398-4f68-f6ce-47cb115e624d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# fox = \"tHe qUICk bROWn fOx.\"\n",
-        "# print(fox.upper())\n",
-        "# print(fox.lower())\n",
-        "# print(fox.title())\n",
-        "# print(fox.capitalize())\n",
-        "# print(fox.swapcase())"
+        "fox = \"tHe qUICk bROWn fOx.\"\n",
+        "print(fox.upper())\n",
+        "print(fox.lower())\n",
+        "print(fox.title())\n",
+        "print(fox.capitalize())\n",
+        "print(fox.swapcase())"
       ],
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "THE QUICK BROWN FOX.\n",
+            "the quick brown fox.\n",
+            "The Quick Brown Fox.\n",
+            "The quick brown fox.\n",
+            "ThE QuicK BrowN FoX.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xMu8D22sxbju"
+        "id": "xMu8D22sxbju",
+        "outputId": "66df6d60-55ff-49cb-ed39-417ab3d41b10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# fox = \"       tHe   qUICk bROWn fOx.\"\n",
-        "# print(fox)\n",
-        "# print(fox.strip())\n",
-        "# print(fox.lstrip())\n",
-        "# print(fox.rstrip())\n",
-        "# print(fox.rstrip('.'))\n",
-        "# print(fox.replace('Ox','XX'))"
+        "fox = \"       tHe   qUICk bROWn fOx.\"\n",
+        "print(fox)\n",
+        "print(fox.strip())\n",
+        "print(fox.lstrip())\n",
+        "print(fox.rstrip())\n",
+        "print(fox.rstrip('.'))\n",
+        "print(fox.replace('Ox','XX'))"
       ],
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       tHe   qUICk bROWn fOx.\n",
+            "tHe   qUICk bROWn fOx.\n",
+            "tHe   qUICk bROWn fOx.\n",
+            "       tHe   qUICk bROWn fOx.\n",
+            "       tHe   qUICk bROWn fOx\n",
+            "       tHe   qUICk bROWn fXX.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -626,23 +858,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DQLkLvmQx11T"
+        "id": "DQLkLvmQx11T",
+        "outputId": "4dac4be3-0530-4e74-db76-23acc68243f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# # Split and work on substrings\n",
-        "# haiku = \"\"\"matsushima-ya\n",
-        "# aah matsushima-ya\n",
-        "# matsushima-ya\"\"\"\n",
-        "# print(haiku,'\\n')  # \\n is the code for newline, i.e. this statements prints an empty line after the string\n",
-        "# lines = haiku.splitlines()\n",
-        "# i=0\n",
-        "# for line in lines:\n",
-        "#     i+=1\n",
-        "#     words = line.split()\n",
-        "#     print('Line',i,'has', len(words), 'words.')"
+        "haiku = \"\"\"matsushima-ya\n",
+        "aah matsushima-ya\n",
+        "matsushima-ya\"\"\"\n",
+        "print(haiku,'\\n')  # \\n is the code for newline, i.e. this statements prints an empty line after the string\n",
+        "lines = haiku.splitlines()\n",
+        "i=0\n",
+        "for line in lines:\n",
+        "   i+=1\n",
+        "   words = line.split()\n",
+        "   print('Line',i,'has', len(words), 'words.')"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "matsushima-ya\n",
+            "aah matsushima-ya\n",
+            "matsushima-ya \n",
+            "\n",
+            "Line 1 has 1 words.\n",
+            "Line 2 has 2 words.\n",
+            "Line 3 has 1 words.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -793,7 +1043,7 @@
       "source": [
         "# ! ls -l"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +1071,7 @@
         "# os.rename('data','data-new') # Renames a file or directory from old to new.\n",
         "# print(os.listdir())"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -839,7 +1089,7 @@
         "# print(os.path.dirname(path))  # Returns the directory name (the part before the last / character).\n",
         "# print(os.path.abspath(path))  # Make path absolute (i.e., start with a /)."
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -847,9 +1097,7 @@
       "metadata": {
         "id": "qKzkTCeTCp_z"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -873,7 +1121,7 @@
         "# os.remove('ReadMe.md')\n",
         "# ! ls -l"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1260,7 @@
         "#     print(instream.readline())\n",
         "#     print(instream.readline())"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1275,7 @@
         "# for i in range(6):\n",
         "#     print(textlines[i])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1071,7 +1319,7 @@
         "# import math\n",
         "# math.cos(math.pi)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1084,7 +1332,7 @@
         "# import numpy as np\n",
         "# np.cos(np.pi)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1345,7 @@
         "# from math import cos, pi\n",
         "# cos(pi)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1110,7 +1358,7 @@
         "# from math import *\n",
         "# sin(pi) ** 2 + cos(pi) ** 2"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1135,7 +1383,7 @@
         "# import math\n",
         "# help(math)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1165,7 +1413,7 @@
       "source": [
         "# !pip install supersmooother"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1191,9 +1439,7 @@
       "metadata": {
         "id": "VliguZ9yRfeS"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -1219,9 +1465,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "RQEutFLKx5VD"
       },
