Start work on coding task 1

--- a/CodingTask1.ipynb
+++ b/CodingTask1.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "CodingTask1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7ZTT6r9MDaF2olRvnUHzB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sigvehaug/DSF-DCBP/blob/main/CodingTask1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/fabian819/DSF/blob/main/CodingTask1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -75,10 +74,170 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "All the relevant imports"
+      ],
+      "metadata": {
+        "id": "Ssr25TwqzdbM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from google.colab import drive\n",
+        "import re\n",
+        "import os\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "OfvMackX-SFc"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mount the google drive"
+      ],
+      "metadata": {
+        "id": "RVdIlPiGz_uC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.mount('/content/drive', force_remount=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t58uc9II0D0q",
+        "outputId": "21eeaaf8-bffd-4a78-9c38-b261ddcd9c59"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CT-1.1**"
+      ],
+      "metadata": {
+        "id": "0vW_uU_9zz8n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def isolate_header(file_path,file_name):\n",
+        "  '''Takes the a file and splits on the line\n",
+        "  which starts with >, only works if > is not\n",
+        "  used in other parts of the file'''\n",
+        "\n",
+        "  path = file_path + '/' + file_name\n",
+        "\n",
+        "  if  not os.path.exists(path):\n",
+        "    raise Exception('There is no such file')\n",
+        "\n",
+        "  with open(path, 'r') as instream:\n",
+        "    separated = re.split('>.*\\n', instream.read())\n",
+        "\n",
+        "  with open(path, 'w') as outstream:\n",
+        "    outstream.write(separated[-1])\n",
+        "\n",
+        "  try:\n",
+        "    with open(file_path + '/CCD-metadata.txt', 'w') as outstream:\n",
+        "      outstream.write(separated[-2])\n",
+        "  except:\n",
+        "    print(\"Probably already split\")\n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "6BIwq6nczabo"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "isolate_header('/content/drive/MyDrive/DSF','CCD-Data.txt')"
+      ],
+      "metadata": {
+        "id": "2E_XJ6Q51eor"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CT-1.2**"
+      ],
+      "metadata": {
+        "id": "p3WuvZrO4zTW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OfvMackX-SFc"
+        "id": "-BdgFUIjKekk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('/content/drive/MyDrive/DSF/CCD-Data.txt', sep='\\t')\n",
+        "df.head()\n",
+        "renamed = df.rename(columns=lambda s: s.split('.')[0])\n",
+        "renamed.groupby(level=0, axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NifjNAPq5O-J",
+        "outputId": "9a21906c-3c49-4584-a68b-fe3af6e14126"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7ff448edecd0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def merging_columns(dataframe):\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "1lRKY-wM424o"
       },
       "execution_count": null,
       "outputs": []
